--- a/index.html
+++ b/index.html
@@ -9,5 +9,22 @@
 </head>
 <body>
   <script src="/main.js"></script>
+  
+تكليفات وتحديات Week 7 من JavaScript Bootcamp
+Assignments
+048 ➜ 053 [for loop]: https://codepen.io/Zaher-aa/pen/bGWrdQd
+054 ➜ 056 [while loop]: https://codepen.io/Zaher-aa/pen/eYWENQR
+Challenges
+عرض المزيد
+تكليفات وتحديات Week 7 من JavaScript Bootcamp
+الواجبات
+048 ➜ 053 [للحلقة]: https://codepen.io/Zaher-aa/pen/bGWrdQd
+054 ➜ 056 [اثناء الحلقة]: https://codepen.io/Zaher-aa/pen/eYWENQR
+- التحديات
+تحدي الحلقة: https://codepen.io/Zaher-aa/pen/RwVZZMZ
+جميع الواجبات: https://codepen.io/collection/dbbewk
+جميع التحديات: https://codepen.io/collection/vBBVpb
+#JavaScript_BootCamp_Assignments
+#JavaScript_BootCamp_Challenges
 </body>
 </html>
