Edit and design the html file

--- a/index.html
+++ b/index.html
@@ -9,22 +9,44 @@
 </head>
 <body>
   <script src="/main.js"></script>
-  
-تكليفات وتحديات Week 7 من JavaScript Bootcamp
-Assignments
-048 ➜ 053 [for loop]: https://codepen.io/Zaher-aa/pen/bGWrdQd
-054 ➜ 056 [while loop]: https://codepen.io/Zaher-aa/pen/eYWENQR
-Challenges
-عرض المزيد
-تكليفات وتحديات Week 7 من JavaScript Bootcamp
-الواجبات
-048 ➜ 053 [للحلقة]: https://codepen.io/Zaher-aa/pen/bGWrdQd
-054 ➜ 056 [اثناء الحلقة]: https://codepen.io/Zaher-aa/pen/eYWENQR
-- التحديات
-تحدي الحلقة: https://codepen.io/Zaher-aa/pen/RwVZZMZ
-جميع الواجبات: https://codepen.io/collection/dbbewk
-جميع التحديات: https://codepen.io/collection/vBBVpb
-#JavaScript_BootCamp_Assignments
-#JavaScript_BootCamp_Challenges
+  <div>
+    <div>
+      <h3>تكليفات وتحديات Week 7 من JavaScript Bootcamp</h3>
+      <h3>Assignments</h3> 
+      <h5>048 ➜ 053 [for loop]:
+      <a href="https://codepen.io/Zaher-aa/pen/bGWrdQd" target="_blank"> 
+        Click here and go-to solution</a>
+      </h5>
+    </div>
+  <br>
+  <div>
+    <h5>054 ➜ 056 [while loop]: <a href="https://codepen.io/Zaher-aa/pen/eYWENQR" target="_blank">
+      Click here and go-to solution</a> 
+    </h5>
+  </div>
+  <hr> 
+  <div>
+    <h3>Challenges</h3>
+    <h5>Loop Challenge:
+    <a href="https:////codepen.io/Zaher-aa/pen/RwVZZMZ" target="_blank">
+    Click here and go-to Loop challenge solution</a>
+    </h5>
+    <br>
+    <h5>
+      All Assignments:
+      <a href="https://codepen.io/collection/dbbewk" target="_blank">
+      Click here and go-to assignments solution</a>
+    </h5>
+    <br>
+    <h5>
+      All Challenges:
+      <a href="https://codepen.io/collection/vBBVpb" target="_blank">
+      Click here and go-to challenges solution</a>
+    </h5>
+    <hr>
+    <p>JavaScript_BootCamp_Assignments</p> 
+    <p>JavaScript_BootCamp_Challenges</p>
+  </div>
+  </div>
 </body>
 </html>
